crates/rsonpath-syntax/tests/snapshots/query_serialization_snapshots__ron__empty_query.snap
---
source: crates/rsonpath-syntax/tests/query_serialization_snapshots.rs
expression: "&query"
snapshot_kind: text
---
JsonPathQuery(
  segments: [],
)
